Ability to delete user.
